Slightly adjusted PresentaBALL image margins to prevent overlaps

--- a/data/HTMLBasedInterface/css/presentaball.css
+++ b/data/HTMLBasedInterface/css/presentaball.css
@@ -176,7 +176,7 @@ body a:focus {
 
 #text-content div.structure {
 	text-align: center;
-	margin: 0 0 20px 0;
+	margin: 20px 0;
 }
 
 #text-content div.structure span {
